Рефакторинг кода, добавление нового функционала.